--- a/schooldriving-app/.eslintrc.json
+++ b/schooldriving-app/.eslintrc.json
@@ -42,6 +42,7 @@
     "no-underscore-dangle":"off",
     "lines-between-class-members":"off",
     "react/jsx-props-no-spreading": "off",
-    "no-unused-expressions": "off"
+    "no-unused-expressions": "off",
+    "no-plusplus":"off"
   }
 }
