--- a/schooldriving-app/package.json
+++ b/schooldriving-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "schooldriving-app",
-  "homepage": "https://acellemailer.cf/drivingmanagementapp/",
+  "homepage": "https://acellemailer.cf/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
