--- a/schooldriving-app/package.json
+++ b/schooldriving-app/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-google-calendar-api": "^1.4.0",
     "react-router-dom": "^5.2.0",
